--- a/.bzrignore
+++ b/.bzrignore
@@ -130,6 +130,10 @@ lisp/eshell/esh-groups.el
 lisp/finder-inf.el
 lisp/gnus/_dir-locals.el
 nextstep/Emacs.app
+nextstep/Cocoa/Emacs.base/Contents/Info.plist
+nextstep/Cocoa/Emacs.base/Contents/Resources/English.lproj
+nextstep/GNUstep/Emacs.base/Resources/Emacs.desktop
+nextstep/GNUstep/Emacs.base/Resources/Info-gnustep.plist
 nt/config.log
 src/_dbxinit
 src/_gdbinit
