--- a/nextstep/templates/InfoPlist.strings.in
+++ b/nextstep/templates/InfoPlist.strings.in
@@ -1,6 +1,6 @@
 /* Localized versions of Info.plist keys */
 
 CFBundleName = "Emacs";
-CFBundleShortVersionString = "Version 24.2.50";
-CFBundleGetInfoString = "Emacs version 24.2.50, NS Windowing";
+CFBundleShortVersionString = "Version @version@";
+CFBundleGetInfoString = "Emacs version @version@, NS Windowing";
 NSHumanReadableCopyright = "Copyright (C) 2012 Free Software Foundation, Inc.";
