--- a/nextstep/templates/InfoPlist.strings.in
+++ b/nextstep/templates/InfoPlist.strings.in
@@ -3,4 +3,4 @@
 CFBundleName = "Emacs";
 CFBundleShortVersionString = "Version @version@";
 CFBundleGetInfoString = "Emacs version @version@, NS Windowing";
-NSHumanReadableCopyright = "Copyright (C) 2012 Free Software Foundation, Inc.";
+NSHumanReadableCopyright = "@copyright@";
