* Makefile.in: Run autogen/copy_autogen if autogen.sh fails,
to create 'configure'; problem reported by Andreas Schwab in
<http://lists.gnu.org/archive/html/emacs-devel/2012-09/msg00438.html>.
* autogen.sh: Exit with status 1 when failing due to missing tools,
reverting the 2012-09-10 change to this file.
* autogen/copy_autogen: Fail if one of the subsidiary actions fail.
Use 'cp -f' for the build-aux files, since the destinations are
typically read-only.

--- a/Makefile.in
+++ b/Makefile.in
@@ -890,11 +890,11 @@ dvi:
 
 # Bootstrapping does the following:
 #  * Remove files to start from a clean slate.
-#  * Run autogen.sh, but don't worry about exit status 101 (missing tools).
+#  * Run autogen.sh, falling back on copy_autogen if autogen.sh fails.
 #  * Build Makefile, to build the build procedure itself.
 #  * Do the actual build.
 bootstrap: bootstrap-clean FRC
-	cd $(srcdir) && { ./autogen.sh || test $$? -eq 101; }
+	cd $(srcdir) && { ./autogen.sh || autogen/copy_autogen; }
 	./configure $(CONFIGURE_FLAGS)
 	$(MAKE) $(MFLAGS) info all
 
