src/makefile.w32-in: Update dependencies.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -392,8 +392,6 @@ SYSTIME_H      = $(SRC)/systime.h \
 ATIMER_H       = $(SRC)/atimer.h \
 		 $(NT_INC)/stdbool.h \
 		 $(SYSTIME_H)
-BLOCKINPUT_H   = $(SRC)/blockinput.h \
-		 $(ATIMER_H)
 BUFFER_H       = $(SRC)/buffer.h \
 		 $(SYSTIME_H)
 C_CTYPE_H      = $(GNU_LIB)/c-ctype.h \
@@ -467,6 +465,8 @@ SOCKET_H       = $(NT_INC)/sys/socket.h \
 		 $(SRC)/w32.h
 STAT_TIME_H    = $(GNU_LIB)/stat-time.h \
 		 $(NT_INC)/sys/stat.h
+SYSSIGNAL_H    = $(SRC)/syssignal.h \
+		 $(NT_INC)/stdbool.h
 SYSTTY_H       = $(SRC)/systty.h \
 		 $(NT_INC)/sys/ioctl.h \
 		 $(NT_INC)/unistd.h
@@ -481,11 +481,11 @@ WINDOW_H       = $(SRC)/window.h \
 
 $(BLD)/alloc.$(O) : \
 	$(SRC)/alloc.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/puresize.h \
 	$(SRC)/w32.h \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/verify.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -499,12 +499,12 @@ $(BLD)/alloc.$(O) : \
 
 $(BLD)/atimer.$(O) : \
 	$(SRC)/atimer.c \
-	$(SRC)/syssignal.h \
+	$(SRC)/blockinput.h \
 	$(NT_INC)/unistd.h \
 	$(ATIMER_H) \
-	$(BLOCKINPUT_H) \
 	$(CONFIG_H) \
 	$(LISP_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTIME_H)
 
 $(BLD)/bidi.$(O) : \
@@ -517,6 +517,7 @@ $(BLD)/bidi.$(O) : \
 
 $(BLD)/buffer.$(O) : \
 	$(SRC)/buffer.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/indent.h \
 	$(SRC)/keymap.h \
@@ -525,7 +526,6 @@ $(BLD)/buffer.$(O) : \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/verify.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -557,14 +557,13 @@ $(BLD)/callint.$(O) : \
 
 $(BLD)/callproc.$(O) : \
 	$(SRC)/callproc.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
 	$(SRC)/epaths.h \
-	$(SRC)/syssignal.h \
 	$(SRC)/w32.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CCL_H) \
 	$(CHARACTER_H) \
@@ -573,6 +572,7 @@ $(BLD)/callproc.$(O) : \
 	$(FRAME_H) \
 	$(LISP_H) \
 	$(PROCESS_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTTY_H) \
 	$(TERMHOOKS_H)
 
@@ -690,7 +690,6 @@ $(BLD)/data.$(O) : \
 	$(SRC)/data.c \
 	$(SRC)/keymap.h \
 	$(SRC)/puresize.h \
-	$(SRC)/syssignal.h \
 	$(GNU_LIB)/intprops.h \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
@@ -699,16 +698,17 @@ $(BLD)/data.$(O) : \
 	$(FRAME_H) \
 	$(KEYBOARD_H) \
 	$(LISP_H) \
+	$(SYSSIGNAL_H) \
 	$(TERMHOOKS_H)
 
 $(BLD)/dired.$(O) : \
 	$(SRC)/dired.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/regex.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -723,15 +723,14 @@ $(BLD)/dired.$(O) : \
 
 $(BLD)/dispnew.$(O) : \
 	$(SRC)/dispnew.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/cm.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
 	$(SRC)/indent.h \
-	$(SRC)/syssignal.h \
 	$(SRC)/termchar.h \
 	$(SRC)/termopts.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -741,6 +740,7 @@ $(BLD)/dispnew.$(O) : \
 	$(KEYBOARD_H) \
 	$(LISP_H) \
 	$(PROCESS_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTIME_H) \
 	$(TERMHOOKS_H) \
 	$(W32TERM_H) \
@@ -768,12 +768,12 @@ $(BLD)/doprnt.$(O) : \
 
 $(BLD)/editfns.$(O) : \
 	$(SRC)/editfns.c \
+	$(SRC)/blockinput.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/intprops.h \
 	$(GNU_LIB)/strftime.h \
 	$(GNU_LIB)/verify.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
@@ -786,16 +786,17 @@ $(BLD)/editfns.$(O) : \
 
 $(BLD)/emacs.$(O) : \
 	$(SRC)/emacs.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/gnutls.h \
 	$(SRC)/keymap.h \
-	$(SRC)/syssignal.h \
 	$(SRC)/unexec.h \
 	$(SRC)/w32.h \
 	$(SRC)/w32heap.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
+	$(GNU_LIB)/ignore-value.h \
+	$(ATIMER_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -804,6 +805,7 @@ $(BLD)/emacs.$(O) : \
 	$(KEYBOARD_H) \
 	$(LISP_H) \
 	$(PROCESS_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTTY_H) \
 	$(TERMHOOKS_H) \
 	$(W32TERM_H) \
@@ -811,8 +813,8 @@ $(BLD)/emacs.$(O) : \
 
 $(BLD)/eval.$(O) : \
 	$(SRC)/eval.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
-	$(BLOCKINPUT_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
 	$(FRAME_H) \
@@ -821,11 +823,11 @@ $(BLD)/eval.$(O) : \
 
 $(BLD)/fileio.$(O) : \
 	$(SRC)/fileio.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
@@ -858,17 +860,16 @@ $(BLD)/firstfile.$(O) : \
 
 $(BLD)/floatfns.$(O) : \
 	$(SRC)/floatfns.c \
-	$(SRC)/syssignal.h \
 	$(CONFIG_H) \
 	$(LISP_H)
 
 $(BLD)/fns.$(O) : \
 	$(SRC)/fns.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/intprops.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
@@ -902,8 +903,8 @@ $(BLD)/font.$(O) : \
 
 $(BLD)/fontset.$(O) : \
 	$(SRC)/fontset.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/fontset.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CCL_H) \
 	$(CHARACTER_H) \
@@ -921,10 +922,10 @@ $(BLD)/fontset.$(O) : \
 
 $(BLD)/frame.$(O) : \
 	$(SRC)/frame.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/fontset.h \
 	$(SRC)/termchar.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -940,7 +941,7 @@ $(BLD)/frame.$(O) : \
 
 $(BLD)/fringe.$(O) : \
 	$(SRC)/fringe.c \
-	$(BLOCKINPUT_H) \
+	$(SRC)/blockinput.h \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -973,10 +974,10 @@ $(BLD)/xml.$(O) : \
 
 $(BLD)/image.$(O) : \
 	$(SRC)/image.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/epaths.h \
 	$(SRC)/w32.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -1011,9 +1012,9 @@ $(BLD)/indent.$(O) : \
 
 $(BLD)/insdel.$(O) : \
 	$(SRC)/insdel.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/region-cache.h \
 	$(GNU_LIB)/intprops.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -1035,19 +1036,18 @@ $(BLD)/intervals.$(O) : \
 
 $(BLD)/keyboard.$(O) : \
 	$(SRC)/keyboard.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
 	$(SRC)/keymap.h \
 	$(SRC)/macros.h \
 	$(SRC)/puresize.h \
 	$(SRC)/syntax.h \
-	$(SRC)/syssignal.h \
 	$(SRC)/termchar.h \
 	$(SRC)/termopts.h \
 	$(NT_INC)/sys/ioctl.h \
 	$(NT_INC)/unistd.h \
 	$(ATIMER_H) \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -1057,6 +1057,7 @@ $(BLD)/keyboard.$(O) : \
 	$(KEYBOARD_H) \
 	$(LISP_H) \
 	$(PROCESS_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTIME_H) \
 	$(TERMHOOKS_H) \
 	$(W32TERM_H) \
@@ -1064,10 +1065,10 @@ $(BLD)/keyboard.$(O) : \
 
 $(BLD)/keymap.$(O) : \
 	$(SRC)/keymap.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
 	$(SRC)/puresize.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1085,12 +1086,12 @@ $(BLD)/lastfile.$(O) : \
 
 $(BLD)/lread.$(O) : \
 	$(SRC)/lread.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/epaths.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1123,8 +1124,8 @@ $(BLD)/marker.$(O) : \
 
 $(BLD)/menu.$(O) : \
 	$(SRC)/menu.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/keymap.h \
-	$(BLOCKINPUT_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
 	$(FRAME_H) \
@@ -1178,10 +1179,10 @@ $(BLD)/w32heap.$(O) : \
 
 $(BLD)/w32inevt.$(O) : \
 	$(SRC)/w32inevt.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/termchar.h \
 	$(SRC)/w32heap.h \
 	$(SRC)/w32inevt.h \
-	$(BLOCKINPUT_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
 	$(FRAME_H) \
@@ -1193,7 +1194,6 @@ $(BLD)/w32inevt.$(O) : \
 
 $(BLD)/w32proc.$(O) : \
 	$(SRC)/w32proc.c \
-	$(SRC)/syssignal.h \
 	$(SRC)/syswait.h \
 	$(SRC)/w32.h \
 	$(SRC)/w32heap.h \
@@ -1205,6 +1205,7 @@ $(BLD)/w32proc.$(O) : \
 	$(LANGINFO_H) \
 	$(LISP_H) \
 	$(PROCESS_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTIME_H) \
 	$(W32TERM_H)
 
@@ -1225,8 +1226,8 @@ $(BLD)/w32console.$(O) : \
 
 $(BLD)/print.$(O) : \
 	$(SRC)/print.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/termchar.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1244,11 +1245,11 @@ $(BLD)/print.$(O) : \
 
 $(BLD)/process.$(O) : \
 	$(SRC)/process.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
 	$(SRC)/gnutls.h \
 	$(SRC)/sysselect.h \
-	$(SRC)/syssignal.h \
 	$(SRC)/syswait.h \
 	$(SRC)/termopts.h \
 	$(NT_INC)/arpa/inet.h \
@@ -1259,7 +1260,6 @@ $(BLD)/process.$(O) : \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
 	$(ATIMER_H) \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
@@ -1270,6 +1270,7 @@ $(BLD)/process.$(O) : \
 	$(LISP_H) \
 	$(PROCESS_H) \
 	$(SOCKET_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTIME_H) \
 	$(SYSTTY_H) \
 	$(TERMHOOKS_H) \
@@ -1278,9 +1279,9 @@ $(BLD)/process.$(O) : \
 
 $(BLD)/ralloc.$(O) : \
 	$(SRC)/ralloc.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/getpagesize.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(CONFIG_H) \
 	$(LISP_H)
 
@@ -1315,12 +1316,12 @@ $(BLD)/scroll.$(O) : \
 
 $(BLD)/search.$(O) : \
 	$(SRC)/search.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/category.h \
 	$(SRC)/commands.h \
 	$(SRC)/regex.h \
 	$(SRC)/region-cache.h \
 	$(SRC)/syntax.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1330,12 +1331,12 @@ $(BLD)/search.$(O) : \
 
 $(BLD)/sound.$(O) : \
 	$(SRC)/sound.c \
-	$(SRC)/syssignal.h \
 	$(NT_INC)/unistd.h \
 	$(ATIMER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
-	$(LISP_H)
+	$(LISP_H) \
+	$(SYSSIGNAL_H)
 
 $(BLD)/syntax.$(O) : \
 	$(SRC)/syntax.c \
@@ -1352,9 +1353,9 @@ $(BLD)/syntax.$(O) : \
 
 $(BLD)/sysdep.$(O) : \
 	$(SRC)/sysdep.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/cm.h \
 	$(SRC)/sysselect.h \
-	$(SRC)/syssignal.h \
 	$(SRC)/syswait.h \
 	$(SRC)/termchar.h \
 	$(SRC)/termopts.h \
@@ -1367,7 +1368,6 @@ $(BLD)/sysdep.$(O) : \
 	$(GNU_LIB)/execinfo.h \
 	$(GNU_LIB)/ignore-value.h \
 	$(GNU_LIB)/utimens.h \
-	$(BLOCKINPUT_H) \
 	$(CAREADLINKAT_H) \
 	$(CONFIG_H) \
 	$(C_CTYPE_H) \
@@ -1378,6 +1378,7 @@ $(BLD)/sysdep.$(O) : \
 	$(LISP_H) \
 	$(PROCESS_H) \
 	$(SOCKET_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTIME_H) \
 	$(SYSTTY_H) \
 	$(TERMHOOKS_H) \
@@ -1385,18 +1386,17 @@ $(BLD)/sysdep.$(O) : \
 
 $(BLD)/term.$(O) : \
 	$(SRC)/term.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/cm.h \
 	$(SRC)/composite.h \
 	$(SRC)/disptab.h \
 	$(SRC)/keymap.h \
-	$(SRC)/syssignal.h \
 	$(SRC)/termchar.h \
 	$(SRC)/termopts.h \
 	$(SRC)/tparam.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/sys/time.h \
 	$(NT_INC)/unistd.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1407,6 +1407,7 @@ $(BLD)/term.$(O) : \
 	$(INTERVALS_H) \
 	$(KEYBOARD_H) \
 	$(LISP_H) \
+	$(SYSSIGNAL_H) \
 	$(SYSTTY_H) \
 	$(TERMHOOKS_H) \
 	$(WINDOW_H)
@@ -1461,12 +1462,12 @@ $(BLD)/vm-limit.$(O) : \
 
 $(BLD)/window.$(O) : \
 	$(SRC)/window.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
 	$(SRC)/indent.h \
 	$(SRC)/keymap.h \
 	$(SRC)/termchar.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
@@ -1481,6 +1482,7 @@ $(BLD)/window.$(O) : \
 
 $(BLD)/xdisp.$(O) : \
 	$(SRC)/xdisp.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
 	$(SRC)/fontset.h \
@@ -1490,7 +1492,7 @@ $(BLD)/xdisp.$(O) : \
 	$(SRC)/region-cache.h \
 	$(SRC)/termchar.h \
 	$(SRC)/termopts.h \
-	$(BLOCKINPUT_H) \
+	$(ATIMER_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1509,10 +1511,10 @@ $(BLD)/xdisp.$(O) : \
 
 $(BLD)/xfaces.$(O) : \
 	$(SRC)/xfaces.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/fontset.h \
 	$(SRC)/termchar.h \
 	$(NT_INC)/sys/stat.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1530,11 +1532,11 @@ $(BLD)/xfaces.$(O) : \
 
 $(BLD)/w32fns.$(O) : \
 	$(SRC)/w32fns.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/epaths.h \
 	$(SRC)/fontset.h \
 	$(SRC)/w32.h \
 	$(SRC)/w32heap.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CCL_H) \
 	$(CHARACTER_H) \
@@ -1555,9 +1557,9 @@ $(BLD)/w32fns.$(O) : \
 
 $(BLD)/w32menu.$(O) : \
 	$(SRC)/w32menu.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/keymap.h \
 	$(SRC)/w32heap.h \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1574,6 +1576,7 @@ $(BLD)/w32menu.$(O) : \
 
 $(BLD)/w32term.$(O) : \
 	$(SRC)/w32term.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/disptab.h \
 	$(SRC)/fontset.h \
 	$(SRC)/keymap.h \
@@ -1582,7 +1585,6 @@ $(BLD)/w32term.$(O) : \
 	$(SRC)/w32heap.h \
 	$(NT_INC)/sys/stat.h \
 	$(ATIMER_H) \
-	$(BLOCKINPUT_H) \
 	$(BUFFER_H) \
 	$(CCL_H) \
 	$(CHARACTER_H) \
@@ -1605,9 +1607,9 @@ $(BLD)/w32term.$(O) : \
 
 $(BLD)/w32select.$(O) : \
 	$(SRC)/w32select.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/composite.h \
 	$(SRC)/w32heap.h \
-	$(BLOCKINPUT_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -1616,15 +1618,15 @@ $(BLD)/w32select.$(O) : \
 
 $(BLD)/w32reg.$(O) : \
 	$(SRC)/w32reg.c \
-	$(BLOCKINPUT_H) \
+	$(SRC)/blockinput.h \
 	$(CONFIG_H) \
 	$(LISP_H) \
 	$(W32TERM_H)
 
 $(BLD)/w32xfns.$(O) : \
 	$(SRC)/w32xfns.c \
+	$(SRC)/blockinput.h \
 	$(SRC)/fontset.h \
-	$(BLOCKINPUT_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
 	$(FRAME_H) \
