src/makefile.w32-in ($(BLD)/callproc.$(O)): Update dependencies.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -561,6 +561,7 @@ $(BLD)/callproc.$(O) : \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
 	$(SRC)/epaths.h \
+	$(SRC)/syswait.h \
 	$(SRC)/w32.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/unistd.h \
