src/makefile.w32-in ($(BLD)/profiler.$(O)): Update dependencies.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -978,7 +978,8 @@ $(BLD)/profiler.$(O) : \
 	$(SRC)/profiler.c \
 	$(NT_INC)/sys/time.h \
 	$(CONFIG_H) \
-	$(LISP_H)
+	$(LISP_H) \
+	$(SYSSIGNAL_H)
 
 $(BLD)/image.$(O) : \
 	$(SRC)/image.c \
