src/makefile.w32-in ($(BLD)/profiler.$(O)): Update dependencies.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -976,10 +976,10 @@ $(BLD)/xml.$(O) : \
 
 $(BLD)/profiler.$(O) : \
 	$(SRC)/profiler.c \
-	$(NT_INC)/sys/time.h \
 	$(CONFIG_H) \
 	$(LISP_H) \
-	$(SYSSIGNAL_H)
+	$(SYSSIGNAL_H) \
+	$(SYSTIME_H)
 
 $(BLD)/image.$(O) : \
 	$(SRC)/image.c \
