Initial version of the w32notify code. Adding and removing a watch seems to work: a new thread is launched when a watch is added and exits when the watch is removed. But there are no notifications, so it seems.  At least, the Lisp callback function passed to w32notify-add-watch is not called.

--- a/lib-src/makefile.w32-in
+++ b/lib-src/makefile.w32-in
@@ -126,7 +126,7 @@ obj =   dosfns.o msdos.o \
 	fontset.o menu.o \
 	w32.o w32console.o w32fns.o w32heap.o w32inevt.o \
 	w32menu.o w32proc.o w32reg.o w32select.o w32term.o w32xfns.o \
-	font.o w32font.o w32uniscribe.o \
+	font.o w32font.o w32uniscribe.o w32notify.o \
 	dispnew.o frame.o scroll.o xdisp.o window.o bidi.o \
 	charset.o coding.o category.o ccl.o character.o chartab.o \
 	cm.o term.o terminal.o xfaces.o \
