--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -134,6 +134,7 @@ OBJ2 =  $(BLD)/sysdep.$(O)		\
 	$(BLD)/w32menu.$(O)		\
 	$(BLD)/w32reg.$(O)		\
 	$(BLD)/w32font.$(O)		\
+	$(BLD)/w32notify.$(O)		\
 	$(BLD)/w32uniscribe.$(O)
 
 LIBS =  $(TLIB0)	\
@@ -209,7 +210,7 @@ GLOBAL_SOURCES =   dosfns.c msdos.c \
 	fontset.c menu.c dbusbind.c \
 	w32.c w32console.c w32fns.c w32heap.c w32inevt.c \
 	w32menu.c w32proc.c w32reg.c w32select.c w32term.c w32xfns.c \
-	font.c w32font.c w32uniscribe.c \
+	font.c w32font.c w32uniscribe.c w32notify.c \
 	dispnew.c frame.c scroll.c xdisp.c window.c bidi.c \
 	charset.c coding.c category.c ccl.c character.c chartab.c \
 	cm.c term.c terminal.c xfaces.c \
@@ -1671,6 +1672,17 @@ $(BLD)/w32uniscribe.$(O) : \
 	$(FRAME_H) \
 	$(LISP_H) \
 	$(W32FONT_H) \
+	$(W32TERM_H)
+
+$(BLD)/w32notify.$(O) : \
+	$(SRC)/w32notify.c \
+	$(SRC)/w32heap.h \
+	$(CODING_H) \
+	$(CONFIG_H) \
+	$(FRAME_H) \
+	$(KEYBOARD_H) \
+	$(LISP_H) \
+	$(TERMHOOKS_H) \
 	$(W32TERM_H)
 
 # Each object file depends on stamp_BLD, because in parallel builds we must
