Fix w32 dependencies due to introduction of w32common.h.
 src/makefile.w32-in ($(BLD)/unexw32.$(O)): 
 ($(BLD)/w32.$(O)): 
 ($(BLD)/w32console.$(O)): 
 ($(BLD)/w32fns.$(O)): 
 ($(BLD)/w32heap.$(O)): 
 ($(BLD)/w32menu.$(O)): 
 ($(BLD)/w32proc.$(O)): Add w32common.h.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -1172,6 +1172,7 @@ $(BLD)/w32.$(O) : \
 	$(SRC)/w32.c \
 	$(SRC)/ndir.h \
 	$(SRC)/w32.h \
+	$(SRC)/w32common.h \
 	$(SRC)/w32heap.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/sys/file.h \
@@ -1190,6 +1191,7 @@ $(BLD)/w32.$(O) : \
 $(BLD)/w32heap.$(O) : \
 	$(SRC)/w32heap.c \
 	$(SRC)/w32heap.h \
+	$(SRC)/w32common.h \
 	$(CONFIG_H) \
 	$(LISP_H)
 
@@ -1212,6 +1214,7 @@ $(BLD)/w32proc.$(O) : \
 	$(SRC)/w32proc.c \
 	$(SRC)/syswait.h \
 	$(SRC)/w32.h \
+	$(SRC)/w32common.h \
 	$(SRC)/w32heap.h \
 	$(NT_INC)/nl_types.h \
 	$(NT_INC)/sys/file.h \
@@ -1229,7 +1232,7 @@ $(BLD)/w32console.$(O) : \
 	$(SRC)/w32console.c \
 	$(SRC)/disptab.h \
 	$(SRC)/termchar.h \
-	$(SRC)/w32heap.h \
+	$(SRC)/w32common.h \
 	$(SRC)/w32inevt.h \
 	$(CHARACTER_H) \
 	$(CODING_H) \
@@ -1467,6 +1470,7 @@ $(BLD)/undo.$(O) : \
 $(BLD)/unexw32.$(O) : \
 	$(SRC)/unexw32.c \
 	$(SRC)/unexec.h \
+	$(SRC)/w32common.h \
 	$(SRC)/w32heap.h \
 	$(CONFIG_H)
 
@@ -1553,6 +1557,7 @@ $(BLD)/w32fns.$(O) : \
 	$(SRC)/epaths.h \
 	$(SRC)/fontset.h \
 	$(SRC)/w32.h \
+	$(SRC)/w32common.h \
 	$(SRC)/w32heap.h \
 	$(BUFFER_H) \
 	$(CCL_H) \
@@ -1576,7 +1581,7 @@ $(BLD)/w32menu.$(O) : \
 	$(SRC)/w32menu.c \
 	$(SRC)/blockinput.h \
 	$(SRC)/keymap.h \
-	$(SRC)/w32heap.h \
+	$(SRC)/w32common.h \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
@@ -1626,7 +1631,7 @@ $(BLD)/w32select.$(O) : \
 	$(SRC)/w32select.c \
 	$(SRC)/blockinput.h \
 	$(SRC)/composite.h \
-	$(SRC)/w32heap.h \
+	$(SRC)/w32common.h \
 	$(CHARSET_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
