--- a/.bzrignore
+++ b/.bzrignore
@@ -159,3 +159,7 @@ src/gl-stamp
 lisp/mh-e/mh-autoloads.el
 lisp/mh-e/mh-cus-load.el
 lib/stdalign.h
+admin/charsets/*.map
+admin/charsets/cp51932.el
+admin/charsets/eucjp-ms.el
+admin/charsets/jisx2131-filter
