Update dependencies in src/makefile.w32-in.
 src/makefile.w32-in ($(BLD)/fileio.$(O)): Add sys/file.h.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -835,6 +835,7 @@ $(BLD)/fileio.$(O) : \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
+	$(NT_INC)/sys/file.h \
 	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
