--- a/.bzrignore
+++ b/.bzrignore
@@ -66,6 +66,7 @@ doc/**/*.pdf
 !doc/lispintro/cons-*.pdf
 !doc/lispintro/drawers.pdf
 !doc/lispintro/lambda-*.pdf
+etc/emacs.tmpdesktop
 etc/refcards/*.aux
 etc/refcards/*.log
 info/*.info
